--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
 <body>
     <header>
        <div class="nav-panel ">
-            <div class="logo"></div>
-            <div class="menu"></div>
+            <div class="logo">
+                <a href=""><img src="img/logo.png" alt=""></a>
+            </div>
+            <div class="menu">
+               <ul>
+                    <li><a href="">home</a></li>
+                    <li><a href="">new game</a></li>
+                    <li><a href="">rules</a></li>
+                </ul>
+            </div>
         </div>
     </header>
     <content>
