--- a/index.html
+++ b/index.html
@@ -21,7 +21,19 @@
         </div>
     </header>
     <content>
-        <div class="board"></div>
+        <div class="board">
+            <div class="cells-box">
+                <div class="cell" id="cell_1"></div>
+                <div class="cell" id="cell_2"></div>
+                <div class="cell" id="cell_3"></div>
+                <div class="cell" id="cell_4"></div>
+                <div class="cell" id="cell_5"></div>
+                <div class="cell" id="cell_6"></div>
+                <div class="cell" id="cell_7"></div>
+                <div class="cell" id="cell_8"></div>
+                <div class="cell" id="cell_9"></div>
+            </div>
+        </div>
         <div class="indicator-turn"></div>
     </content>
     <footer>
