--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script type="text/jscript" src="js/jquery-3.1.1.min.js"></script>
+    <script type="text/jscript" src="js/scrypt.js"></script> 
     <link rel="stylesheet" href="css/style.css">
     <title>Tic-tac-toe</title>
 </head>
