add start and turn functions

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <script type="text/jscript" src="js/jquery-3.1.1.min.js"></script>
     <script type="text/jscript" src="js/scrypt.js"></script> 
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>Tic-tac-toe</title>
 </head>
