function chwck winner and codding end function

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="indicator-turn"></div>
     </content>
     <footer>
-        <div class="messages-box">The turn of  the “X” player  now</div>
+        <div class="messages-box"></div>
     </footer>
 </body>
 </html>
